--- a/src/style.css
+++ b/src/style.css
@@ -104,3 +104,67 @@ code {
 #no-messages p {
   margin: 1em;
 }
+
+.message-copy-toolbar {
+    position: absolute;
+    right: 1em;
+    top: .3em;
+}
+
+button.copy-messages-button, button.clear-copy-selections {
+    background: #03a9f4;
+    border: none;
+    color: #fff;
+    padding: 1em;
+    cursor: pointer;
+    text-decoration: underline;
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.8em;
+}
+
+button.copy-messages-button:hover, button.clear-copy-selections:hover {
+    background: #56beec;
+}
+
+.message-copy-checkbox-container {
+  width: 20px;
+  position: relative;
+  display: inline;
+  padding: 0.2em;
+  padding-right: 1em;
+}
+
+.message-copy-checkbox-container label {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 4px;
+  box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.4);
+  background: #0090d2;
+}
+
+.message-copy-checkbox-container label:after {
+  content: '';
+  width: 9px;
+  height: 5px;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  border: 3px solid #fcfff4;
+  border-top: none;
+  border-right: none;
+  background: transparent;
+  opacity: 0;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.message-copy-checkbox-container input[type=checkbox] {
+  visibility: hidden;
+}
+.message-copy-checkbox-container input[type=checkbox]:checked + label:after {
+  opacity: 1;
+}
